5/16/14 replace sun.TextPushButtonDeprecated with sun.RectangularPushButton
3/20/14 rename some things to fix confusion with 'BarMagnet' screen
10/29/13 joist#69, convert to different requirejs style for main.js
10/29/13 add sample credits and dev options to main.js
10/4/13 convert to use PhET string.js plugin
9/25/13 move strings file to js/example-sim-strings.js, fix imports
9/25/13 change BarMagnet to use PropertySet
9/23/13 convert to use chipper 'image' plug-in, and scenery-phet.ResetAllButton
9/23/13 added EXAMPLE_SIM namespace to example-sim-config.js and all source files
9/19/13 changes required by merge of chipper 'single-file' branch into master
8/22/13 joist#35, terminology change: tab -> screen
7/24/13 add local copy of new ResetAllButton and associated images
7/11/13 change double quotes (") to single quotes (') throughout
6/19/13 upgrade lodash, jQuery and require
6/7/13 upgrade from lodash-1.0.0-rc3 to lodash-1.2.1, fixes Chrome "source URL declaration is deprecated" warning
6/7/13 replace imagesloaded jquery plugin with PxLoader, integrate SimLauncher
# 0.0.0-1 6/3/13
6/3/13 cleanup example-sim, bring it up to current PhET practices
4/23/13 delete TODO.txt because no one seems to be using it and everything in it is currently irrelevant
4/23/13 delete "Show Performance Monitor" control, joist doesn't support it
4/23/13 specify background color for tab that is passed to Sim
4/23/13 rename ExampleSimScene to ExampleSimView, since it is not a scene
4/23/13 remove some clearly-obsolete cruft from example-sim.css
4/2/13 Switched from phetcommon/inheritance to phet_core/inherit
3/6/13 delete phetcommon type (Dimension2D, Vector2D, Point2D), use dot type (Dimension2 and Vector2)
3/6/13 delete submodules and common/
3/6/13 expect dependent repositories (phetcommon, easel-phet) to be checked out as siblings in the directory hierarchy
2/26/13 use i18n release instead of submodule fork
2/26/13 upgrade contrib to latest versions